Change php-fpm docker versions
Now using debian-9 tags instead of prod because of lib issue.

--- a/cloud-init.cfg
+++ b/cloud-init.cfg
@@ -21,7 +21,7 @@ write_files:
     ExecStartPre=/usr/bin/docker-credential-gcr configure-docker
     ExecStart=/usr/bin/docker run --rm  \
         -v /home/fullfeed/www:/www \
-        --name=php-fpm bitnami/php-fpm:7.1-prod
+        --name=php-fpm bitnami/php-fpm:7.1-debian-9
     ExecStop=/usr/bin/docker stop php-fpm
     ExecStopPost=/usr/bin/docker rm php-fpm
 
